# pydevkit

./: .gitignore  README.md  pyproject.toml
config/: .coveragerc  mypy.ini  pytest.ini  ruff.toml
src/pydevkit/: __init__.py  main.py  utils.py
tests/: test_main.py
